grpc-python/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: grpc-python-peer-authentication
spec:
  mtls:
    mode: PERMISSIVE
