grpc-python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-python
  template:
    metadata:
      labels:
        app: grpc-python
        sidecar.istio.io/inject: 'true'
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
      # 위 어노테이션을 달지 않으면 istio-sidecar-injector 가 mutatingWebhook 에서 강제로 http-get 으로 수정한다.
      # 글로벌하게 설정하고 싶으면 istio-sidecar-injector 의 configmap 을 수정하면 된다.
      # https://preliminary.istio.io/latest/docs/ops/configuration/mesh/app-health-check/#disable-the-http-probe-rewrite-for-a-pod
        sidecar.istio.io/userVolumeMount: '[{"name":"proto-descriptor","mountPath":"/etc/envoy","readOnly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"proto-descriptor","configMap":{"name":"grpc-python-proto-descriptor-configmap","items":[{"key":"helloworld.pb","path":"helloworld.pb"}]}}]'
    spec:
      containers:
        - name: grpc-python
          image: kimsehwan96/python-grpc
          # https://github.com/kimsehwan96/gRPC-python-example 
          # 위 레포의 파이썬 코드를 빌드한 이미지임. 개인적으로 빌드해서 사용하시거나, 위 dockerhub repo 에서 땡겨서 쓰세요
          imagePullPolicy: Always
          ports:
            - containerPort: 7777
              name: grpc
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          readinessProbe:
            grpc:
              port: 7777
