grpc-python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-python-service
  labels:
    app: grpc-python
spec:
  type: ClusterIP
  selector:
    app: grpc-python
  ports:
    - name: grpc
      protocol: TCP
      port: 80
      targetPort: 7777
