grpc-python/grpc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'grpc.hayden.com'
      port:
        name: http-and-grpc
        number: 80
        protocol: GRPC
      tls:
        httpsRedirect: false
    # HTTP, GRPC 동시에 명시하지 않아도 , HTTP / GRPC 하나만 명시해도 동작함.
